// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders alert with zIndex correctly 1`] = `
<AnimatedComponent
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  style={
    Object {
      "elevation": 1,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "transform": Array [
        Object {
          "translateY": -100,
        },
      ],
      "zIndex": 99,
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.95}
    disabled={false}
    onLayout={[Function]}
    onPress={[Function]}
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "padding": 8,
            "paddingTop": 20,
          },
          Object {
            "backgroundColor": "#2B73B6",
          },
        ]
      }
    >
      <SafeAreaView
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <ImageView
          imageProps={Object {}}
          source={
            Object {
              "testUri": "../../../assets/info.png",
            }
          }
          style={
            Object {
              "alignSelf": "center",
              "height": 36,
              "padding": 8,
              "width": 36,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "padding": 8,
            }
          }
        >
          <Label
            numberOfLines={1}
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 16,
                "fontWeight": "bold",
                "textAlign": "left",
              }
            }
            text="Hello"
            textProps={Object {}}
          />
          <Label
            numberOfLines={3}
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 14,
                "fontWeight": "normal",
                "textAlign": "left",
              }
            }
            text="World!"
            textProps={Object {}}
          />
        </View>
      </SafeAreaView>
    </View>
  </TouchableOpacity>
</AnimatedComponent>
`;

exports[`renders custom alert correctly 1`] = `
<AnimatedComponent
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  style={
    Object {
      "elevation": 1,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "transform": Array [
        Object {
          "translateY": -100,
        },
      ],
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.95}
    disabled={false}
    onLayout={[Function]}
    onPress={[Function]}
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "padding": 8,
            "paddingTop": 20,
          },
          Object {
            "flexDirection": "row",
            "padding": 16,
          },
        ]
      }
    >
      <SafeAreaView
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <ImageView
          imageProps={Object {}}
          source="https://facebook.github.io/react-native/docs/assets/favicon.png"
          style={
            Object {
              "alignSelf": "center",
              "height": 36,
              "padding": 8,
              "width": 36,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "padding": 8,
            }
          }
        >
          <Label
            numberOfLines={1}
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 16,
                "fontWeight": "bold",
                "textAlign": "left",
              }
            }
            text="Hello"
            textProps={Object {}}
          />
          <Label
            numberOfLines={3}
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 14,
                "fontWeight": "normal",
                "textAlign": "left",
              }
            }
            text="World!"
            textProps={Object {}}
          />
        </View>
      </SafeAreaView>
    </View>
  </TouchableOpacity>
</AnimatedComponent>
`;

exports[`renders custom alert with cancel correctly 1`] = `
<AnimatedComponent
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  style={
    Object {
      "elevation": 1,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "transform": Array [
        Object {
          "translateY": -100,
        },
      ],
    }
  }
>
  <TouchableOpacity
    activeOpacity={1}
    disabled={false}
    onLayout={[Function]}
    onPress={[Function]}
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "padding": 8,
            "paddingTop": 20,
          },
          Object {
            "flexDirection": "row",
            "padding": 16,
          },
        ]
      }
    >
      <SafeAreaView
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <ImageView
          imageProps={Object {}}
          source="https://facebook.github.io/react-native/docs/assets/favicon.png"
          style={
            Object {
              "alignSelf": "center",
              "height": 36,
              "padding": 8,
              "width": 36,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "padding": 8,
            }
          }
        >
          <Label
            numberOfLines={1}
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 16,
                "fontWeight": "bold",
                "textAlign": "left",
              }
            }
            text="Hello"
            textProps={Object {}}
          />
          <Label
            numberOfLines={3}
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 14,
                "fontWeight": "normal",
                "textAlign": "left",
              }
            }
            text="World!"
            textProps={Object {}}
          />
        </View>
      </SafeAreaView>
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}
        style={
          Object {
            "alignSelf": "center",
            "height": 36,
            "width": 36,
          }
        }
      >
        <ImageView
          imageProps={Object {}}
          source={
            Object {
              "testUri": "../../../assets/cancel.png",
            }
          }
          style={
            Object {
              "alignSelf": "center",
              "height": 36,
              "padding": 8,
              "width": 36,
            }
          }
        />
      </TouchableOpacity>
    </View>
  </TouchableOpacity>
</AnimatedComponent>
`;

exports[`renders error alert correctly 1`] = `
<AnimatedComponent
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  style={
    Object {
      "elevation": 1,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "transform": Array [
        Object {
          "translateY": -100,
        },
      ],
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.95}
    disabled={false}
    onLayout={[Function]}
    onPress={[Function]}
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "padding": 8,
            "paddingTop": 20,
          },
          Object {
            "backgroundColor": "#cc3232",
          },
        ]
      }
    >
      <SafeAreaView
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <ImageView
          imageProps={Object {}}
          source={
            Object {
              "testUri": "../../../assets/error.png",
            }
          }
          style={
            Object {
              "alignSelf": "center",
              "height": 36,
              "padding": 8,
              "width": 36,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "padding": 8,
            }
          }
        >
          <Label
            numberOfLines={1}
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 16,
                "fontWeight": "bold",
                "textAlign": "left",
              }
            }
            text="Hello"
            textProps={Object {}}
          />
          <Label
            numberOfLines={3}
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 14,
                "fontWeight": "normal",
                "textAlign": "left",
              }
            }
            text="World!"
            textProps={Object {}}
          />
        </View>
      </SafeAreaView>
    </View>
  </TouchableOpacity>
</AnimatedComponent>
`;

exports[`renders info alert correctly 1`] = `
<AnimatedComponent
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  style={
    Object {
      "elevation": 1,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "transform": Array [
        Object {
          "translateY": -100,
        },
      ],
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.95}
    disabled={false}
    onLayout={[Function]}
    onPress={[Function]}
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "padding": 8,
            "paddingTop": 20,
          },
          Object {
            "backgroundColor": "#2B73B6",
          },
        ]
      }
    >
      <SafeAreaView
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <ImageView
          imageProps={Object {}}
          source={
            Object {
              "testUri": "../../../assets/info.png",
            }
          }
          style={
            Object {
              "alignSelf": "center",
              "height": 36,
              "padding": 8,
              "width": 36,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "padding": 8,
            }
          }
        >
          <Label
            numberOfLines={1}
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 16,
                "fontWeight": "bold",
                "textAlign": "left",
              }
            }
            text="Hello"
            textProps={Object {}}
          />
          <Label
            numberOfLines={3}
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 14,
                "fontWeight": "normal",
                "textAlign": "left",
              }
            }
            text="World!"
            textProps={Object {}}
          />
        </View>
      </SafeAreaView>
    </View>
  </TouchableOpacity>
</AnimatedComponent>
`;

exports[`renders success alert correctly 1`] = `
<AnimatedComponent
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  style={
    Object {
      "elevation": 1,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "transform": Array [
        Object {
          "translateY": -100,
        },
      ],
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.95}
    disabled={false}
    onLayout={[Function]}
    onPress={[Function]}
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "padding": 8,
            "paddingTop": 20,
          },
          Object {
            "backgroundColor": "#32A54A",
          },
        ]
      }
    >
      <SafeAreaView
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <ImageView
          imageProps={Object {}}
          source={
            Object {
              "testUri": "../../../assets/success.png",
            }
          }
          style={
            Object {
              "alignSelf": "center",
              "height": 36,
              "padding": 8,
              "width": 36,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "padding": 8,
            }
          }
        >
          <Label
            numberOfLines={1}
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 16,
                "fontWeight": "bold",
                "textAlign": "left",
              }
            }
            text="Hello"
            textProps={Object {}}
          />
          <Label
            numberOfLines={3}
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 14,
                "fontWeight": "normal",
                "textAlign": "left",
              }
            }
            text="World!"
            textProps={Object {}}
          />
        </View>
      </SafeAreaView>
    </View>
  </TouchableOpacity>
</AnimatedComponent>
`;

exports[`renders warn alert correctly 1`] = `
<AnimatedComponent
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  style={
    Object {
      "elevation": 1,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "transform": Array [
        Object {
          "translateY": -100,
        },
      ],
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.95}
    disabled={false}
    onLayout={[Function]}
    onPress={[Function]}
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "padding": 8,
            "paddingTop": 20,
          },
          Object {
            "backgroundColor": "#cd853f",
          },
        ]
      }
    >
      <SafeAreaView
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <ImageView
          imageProps={Object {}}
          source={
            Object {
              "testUri": "../../../assets/warn.png",
            }
          }
          style={
            Object {
              "alignSelf": "center",
              "height": 36,
              "padding": 8,
              "width": 36,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "padding": 8,
            }
          }
        >
          <Label
            numberOfLines={1}
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 16,
                "fontWeight": "bold",
                "textAlign": "left",
              }
            }
            text="Hello"
            textProps={Object {}}
          />
          <Label
            numberOfLines={3}
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 14,
                "fontWeight": "normal",
                "textAlign": "left",
              }
            }
            text="World!"
            textProps={Object {}}
          />
        </View>
      </SafeAreaView>
    </View>
  </TouchableOpacity>
</AnimatedComponent>
`;
